# SO-UDC

./: CMDlist.c  CMDlist.h  CMakeLists.txt  CommandList.c  CommandList.h  Commands.c  Commands.h  Commands123.c  DirectoryList.c  DirectoryList.h  FileList.c  FileList.h  Functions.c  Functions.h  HistoryList.c  HistoryList.h  Makefile  MemoryBlockList.c  MemoryBlockList.h  ProcessesList.c  ProcessesList.h  README  README.md  functions.c  functions.h  main.c  printinfo
